# rfi-watcher

./: .env.example  README.md  classify.py  extract.py  pyproject.toml  requirements.txt  watch.py
src/rfi_watcher/: classify.py  config.py  extract.py  models.py  watch.py
tests/: test_classify.py
